# molko

./: .clang  .editorconfig  .hgignore  CMakeLists.txt  GNUmakefile  INSTALL.md  LICENSE.md  Makefile  README.md  STYLE.md  battle-state-selection.h  config.h.in  package-mingw64.sh
assets/: CMakeLists.txt
cmake/: CMakeLists.txt  FindJansson.cmake  FindLibzip.cmake  FindNLS.cmake  FindSDL2.cmake  FindSndFile.cmake  FindZIP.cmake  FindZSTD.cmake  MlkBcc.cmake  MlkExecutable.cmake  MlkLibrary.cmake  MlkMap.cmake  MlkNls.cmake  MlkOptions.cmake  MlkOptions.install.cmake  MlkTileset.cmake  MolkoBuildAssets.cmake  MolkoBuildMaps.cmake  MolkoBuildTilesets.cmake  (+7 more)
doc/: CMakeLists.txt  Doxyfile  about.rst  api-js-starter.rst  api-js.rst  api-molko-clock.rst  api-molko-event.rst  api-molko-font.rst  api-molko-music.rst  api-molko-painter.rst  api-molko-sprite.rst  api-molko-texture.rst  api-molko-util.rst  api-molko-window.rst  api.rst  build.rst  conf.py  doxybook.json  getting-started.rst  index.rst  mkdocs.yml  spec-map.rst  spec-tileset.rst  specifications.rst  tool-bcc.rst  tool-map.rst  tool-tileset.rst  tools.rst
doc/api/: libcore.rst
doc/api/core/: action.rst  alloc.rst  animation.rst  clock.rst  color.rst  core.rst  drawable.rst  error.rst  event.rst  font.rst  game.rst  image.rst  inhibit.rst  key.rst  maths.rst  mouse.rst  music.rst  painter.rst  panic.rst  plat.rst  save.rst  script.rst  sound.rst  sprite.rst  state.rst  sys.rst  texture.rst  trace.rst  util.rst  wait.rst  window.rst
doc/docs/: about.md  index.md  install.md
doc/docs/cmake/: MolkoBuildAssets.md  MolkoBuildMaps.md  MolkoBuildTilesets.md  MolkoBuildTranslations.md  MolkoDefineExecutable.md  MolkoDefineLibrary.md  MolkoDefineTest.md  MolkoSetBuildDirectories.md  MolkoSetCompilerFlags.md
doc/docs/dev/: error.md  faq.md  ownership.md
doc/docs/dev/api/core/: action.md  alloc.md  animation.md  clock.md  color.md  core.md  drawable.md  error.md  event.md  font.md  game.md  image.md  inhibit.md  key.md  maths.md  mouse.md  music.md  painter.md  panic.md  save.md  script.md  sound.md  sprite.md  state.md  sys.md  texture.md  trace.md  translate.md  util.md  window.md  zfile.md
doc/docs/dev/howto/: 01-init.md
doc/docs/specs/: map.md  tileset.md
doc/docs/tools/: bcc.md  map.md  tileset.md
doc/scripts/: cmake-extract.sh
doc/templates/: breadcrumbs.tmpl  class_members_details.tmpl  class_members_inherited_tables.tmpl  details.tmpl  header.tmpl  kind_class.tmpl  kind_file.tmpl  kind_group.tmpl  kind_nonclass.tmpl  member_details.tmpl  nonclass_members_tables.tmpl
doxygen/: CMakeLists.txt  Doxyfile  groups.c  mainpage.c  page-examples.c  page-faq.c  page-howto-error.c  page-howto-initialization.c  page-howto-ownership.c  page-portability.c
examples/: CMakeLists.txt  example-action.c  example-animation.c  example-audio.c  example-battle.c  example-cursor.c  example-debug.c  example-drawable.c  example-font.c  example-gridmenu.c  example-inventory.c  example-label.c  example-message.c  example-sound.c  example-sprite.c  example-trace.c  example-ui.c
examples/assets/maps/: map-rebonai.json  map-world.json  simple.json  tileset-town.json  tileset-world.json  village.json
examples/assets/sprites/: john-sword.xcf  john-walk.xcf
examples/battle/: registry.h  spell-fire.c  spell-fire.h
examples/example/: character-john.c  registry.c  registry.h  spell-fire.c  spell-fire.h  trace_hud.c  trace_hud.h
examples/example-action/: CMakeLists.txt  chest.c  chest.h  dialog.c  dialog.h  example-action.c  main.c
examples/example-animation/: CMakeLists.txt  example-animation.c  main.c
examples/example-audio/: CMakeLists.txt  example-audio.c  main.c
examples/example-battle/: CMakeLists.txt  character-john.c  character-john.h  example-battle.c  main.c  registry.c  registry.h  spell-fire.c  spell-fire.h
examples/example-coroutines/: CMakeLists.txt  app.c  app.h  example-coroutines.c  state-menu.c  state-menu.h  state-play.c  state-play.h  state-splash.c  state-splash.h
examples/example-cursor/: CMakeLists.txt  example-cursor.c  main.c
examples/example-debug/: CMakeLists.txt  example-debug.c  main.c
examples/example-drawable/: CMakeLists.txt  example-drawable.c  main.c
examples/example-font/: CMakeLists.txt  example-font.c  main.c
examples/example-gamepad/: CMakeLists.txt  example-gamepad.c
examples/example-gridmenu/: CMakeLists.txt  example-gridmenu.c  main.c
examples/example-label/: CMakeLists.txt  example-label.c  main.c
examples/example-map/: CMakeLists.txt  example-map.c  main.c
examples/example-message/: CMakeLists.txt  example-message.c  main.c
examples/example-notify/: CMakeLists.txt  example-notify.c  main.c
examples/example-sprite/: CMakeLists.txt  example-sprite.c  main.c
examples/example-states/: CMakeLists.txt  example-states.c  state-menu.c  state-menu.h  state-play.c  state-play.h  state-splash.c  state-splash.h
examples/example-tileset/: CMakeLists.txt  example-tileset.c
examples/example-trace/: CMakeLists.txt  example-trace.c  main.c  trace_hud.c  trace_hud.h
examples/example-ui/: CMakeLists.txt  button-glower.c  button-glower.h  button-style-glow.c  button-style-glow.h  example-ui.c  main.c
examples/js/: painter.js  window.js
libmlk-data/: CMakeLists.txt
libmlk-data/maps/: map-world.json  tileset-world.json
libmlk-data/sprites/: chest.xcf
src/libmlk-data/: CMakeLists.txt
src/libmlk-data/maps/: tileset-world.json
tests/: CMakeLists.txt  test-action-script.c  test-action.c  test-alloc.c  test-character.c  test-color.c  test-dir.c  test-drawable.c  test-error.c  test-inventory.c  test-map.c  test-panic.c  test-property.c  test-rbuf.c  test-save-quest.c  test-save.c  test-script.c  test-state.c  test-tileset.c  test-util.c  test-vfs-dir.c  test-vfs-directory.c  test-vfs-zip.c  test.h
tests/assets/maps/: error-columns.map  error-height.map  error-image.tileset  error-rows.map  error-tileheight.map  error-tileheight.tileset  error-tilewidth.map  error-tilewidth.tileset  error-title.map  error-width.map  sample-map.map  sample-tileset.tileset
(+1138 files in other folders)
